unpackaged/main/default/objects/BLND_DFTE_Time__c/fields/BLND_Attachment_Link__c.field-meta.xml
<CustomField>
	<fullName>BLND_Attachment_Link__c</fullName>
	<label>Attachment Link</label>
	<length>40</length>
	<type>Text</type>
</CustomField>