unpackaged/main/default/objects/BLND_DFTE_Time__c/fields/BLND_Billable__c.field-meta.xml
<CustomField>
	<fullName>BLND_Billable__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Billable</label>
	<type>Checkbox</type>
</CustomField>