unpackaged/main/default/objects/BLND_DFTE_Time__c/fields/BLND_Case_Link__c.field-meta.xml
<CustomField>
	<fullName>BLND_Case_Link__c</fullName>
	<label>Case Link</label>
	<referenceTo>Case</referenceTo>
	<relationshipLabel>DreamTeam Times</relationshipLabel>
	<relationshipName>R00N30000002PYioEAG</relationshipName>
	<relationshipOrder>0</relationshipOrder>
	<type>MasterDetail</type>
</CustomField>