unpackaged/main/default/objects/BLND_DFTE_Time__c/fields/BLND_Contact_Link__c.field-meta.xml
<CustomField>
	<fullName>BLND_Contact_Link__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Contact Link</label>
	<referenceTo>Contact</referenceTo>
	<relationshipName>R00N30000002PYiFEAW</relationshipName>
	<type>Lookup</type>
</CustomField>