unpackaged/main/default/objects/BLND_DFTE_Time__c/fields/BLND_Opportunity_Link__c.field-meta.xml
<CustomField>
	<fullName>BLND_Opportunity_Link__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Opportunity Link</label>
	<referenceTo>Opportunity</referenceTo>
	<relationshipName>R00N30000002PYgOEAW</relationshipName>
	<type>Lookup</type>
</CustomField>