unpackaged/main/default/objects/BLND_DFTE_Time__c/fields/BLND_Status__c.field-meta.xml
<CustomField>
	<fullName>BLND_Status__c</fullName>
	<label>Status</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Saved</fullName>
			</value>
			<value>
				<fullName>Submitted</fullName>
			</value>
			<value>
				<fullName>Approved</fullName>
			</value>
			<value>
				<fullName>Rejected</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>