unpackaged/main/default/objects/BLND_DFTE_Time__c/fields/BLND_Submitted__c.field-meta.xml
<CustomField>
	<fullName>BLND_Submitted__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Submitted</label>
	<type>Checkbox</type>
</CustomField>