unpackaged/main/default/objects/BLND_DFTE_Time__c/fields/BLND_Time__c.field-meta.xml
<CustomField>
	<fullName>BLND_Time__c</fullName>
	<label>Time</label>
	<precision>12</precision>
	<scale>2</scale>
	<type>Number</type>
</CustomField>