unpackaged/main/default/objects/BLND_DFTE_Time__c/fields/BLND_Time_Units__c.field-meta.xml
<CustomField>
	<fullName>BLND_Time_Units__c</fullName>
	<label>Time Units</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Hours</fullName>
			</value>
			<value>
				<fullName>Minutes</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>