unpackaged/main/default/objects/BLND_DFTE_Time__c/fields/BLND_Type__c.field-meta.xml
<CustomField>
	<fullName>BLND_Type__c</fullName>
	<label>Type</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>No Task Type</fullName>
				<default>true</default>
				<label>No Task Type</label>
			</value>
			<value>
				<fullName>Project Task</fullName>
			</value>
			<value>
				<fullName>Sales Support</fullName>
			</value>
			<value>
				<fullName>Training &amp; Education</fullName>
			</value>
			<value>
				<fullName>Practice Development</fullName>
			</value>
			<value>
				<fullName>Internal Meeting</fullName>
			</value>
			<value>
				<fullName>Performance Management</fullName>
			</value>
			<value>
				<fullName>Enterprise Account Support</fullName>
			</value>
			<value>
				<fullName>General Administration</fullName>
			</value>
			<value>
				<fullName>Paid Time Off</fullName>
			</value>
			<value>
				<fullName>Recruiting and Interviewing</fullName>
			</value>
			<value>
				<fullName>Instructing</fullName>
			</value>
			<value>
				<fullName>Tom work</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>